--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
 .slideshow {
   margin: 0 auto;
   overflow: hidden;
-  max-width: 700px;
+  max-width: 800px;
+  width: 2300px;
 }
 
 .slideshowSlider {
