--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,13 @@
   background-color: #f39305 !important;
 }
 
+.navbar {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
+  -webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
+}
+
+
 /* Slideshow */
 
 .slideshow {
