--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,10 @@
   color:white
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
